--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    color-scheme: dark light;
+}
+
+html {
+    font-family: system-ui, sans-serif;
+}
+
+body {
+    background-color: #050505;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+}
