feat: added skills component and projects information

--- a/src/app/Components/proyects/proyects.component.html
+++ b/src/app/Components/proyects/proyects.component.html
@@ -7,12 +7,10 @@
             </svg>
         </div>
         <div class="w-full">
-            <div class="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-48 mb-4"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[480px] mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[440px] mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[460px] mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[360px]"></div>
+            <h3 class="text-lg font-semibold text-yellow-200 py-3">Sistema de control de ventas</h3>
+            <p>
+                Participé en el desarrollo de un sistema automatizado de facturación para una tienda de accesorios electrónicos, optimizando su gestión durante las rebajas. El sistema muestra productos, precios con descuentos y calcula automáticamente el importe bruto, IVA y neto final, mejorando la eficiencia y reduciendo errores.
+            </p>
         </div>
         <span class="sr-only">Loading...</span>
     </div>
@@ -24,12 +22,10 @@
             </svg>
         </div>
         <div class="w-full">
-            <div class="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-48 mb-4"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[480px] mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[440px] mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[460px] mb-2.5"></div>
-            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[360px]"></div>
+            <h3 class="text-lg font-semibold text-yellow-200 py-3">UCN e-commerce</h3>
+            <p>
+                Participé en la implementación de un e-commerce para La Tienda UCN, con el objetivo de satisfacer las necesidades y expectativas de sus clientes.
+            </p>
         </div>
         <span class="sr-only">Loading...</span>
     </div>
