--- a/src/app/Components/work-experience/work-experience.component.html
+++ b/src/app/Components/work-experience/work-experience.component.html
@@ -1,24 +1,21 @@
-<h2 class="text-2xl font-semibold mb-10">Experiencia laboral</h2>
+<h2 class="text-2xl font-semibold mb-10">Rol profesional</h2>
     <ol class="relative border-s border-gray-200 dark:border-gray-700">                  
         <li class="mb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-            <time class="mb-1 text-sm font-normal leading-none text-white-100">February 2022</time>
-            <h3 class="text-lg font-semibold text-yellow-200">Application UI code in Tailwind CSS</h3>
-            <p class="mb-4 text-base font-normal text-white-100 c">Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.</p>
-            <a href="#" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Learn more <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-    </svg></a>
+            <time class="mb-1 text-sm font-normal leading-none text-white-100">Actualmente</time>
+            <h3 class="text-lg font-semibold text-yellow-200">
+                Estudiante de Ingeniería Civil en Computación e Informática en la Universidad Católica del Norte.
+            </h3>
+            <p class="mb-4 text-base font-normal text-white-100 c">
+                Estudiante de Ingeniería Civil en Computación e Informática en la Universidad Católica del Norte, enfocado en desarrollo de software, ciencia de datos y soluciones tecnológicas innovadoras.
+            </p>
         </li>
         <li class="mb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-            <time class="mb-1 text-sm font-normal leading-none text-white-100">March 2022</time>
-            <h3 class="text-lg font-semibold text-yellow-200">Marketing UI design in Figma</h3>
-            <p class="text-base font-normal text-white-100">All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.</p>
-        </li>
-        <li class="ms-4">
-            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-            <time class="mb-1 text-sm font-normal leading-none text-white-100">April 2022</time>
-            <h3 class="text-lg font-semibold text-yellow-200">E-Commerce UI code in Tailwind CSS</h3>
-            <p class="text-base font-normal text-white-100">Get started with dozens of web components and interactive elements built on top of Tailwind CSS.</p>
+            <time class="mb-1 text-sm font-normal leading-none text-white-100">January 2027</time>
+            <h3 class="text-lg font-semibold text-yellow-200">Ingeniero de sotware</h3>
+            <p class="text-base font-normal text-white-100">
+                ngeniero de Software, especializado en desarrollo de aplicaciones, optimización de sistemas y ciencia de datos, con experiencia en metodologías ágiles y resolución de problemas complejos.
+            </p>
         </li>
 </ol>
