feat: added contact form

--- a/src/app/Components/skills/skills.component.html
+++ b/src/app/Components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="w-full max-w-4xl mx-auto py-10">
+<div class="w-full max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold mb-10">Habilidades</h2>
     <ol class="flex flex-col sm:flex-row justify-between gap-8">
         <!-- Habilidades Técnicas -->
@@ -13,7 +13,7 @@
             </div>
             <div class="mt-4">
                 <h3 class="text-lg font-semibold text-yellow-200 dark:text-white">Técnicas</h3>
-                <ul class="mt-2 space-y-2 text-gray-500 list-disc list-inside dark:text-gray-400">
+                <ul class="mt-2 space-y-2 text-withe-200 list-disc list-inside dark:text-gray-400">
                     <li>.NET</li>
                     <li>Java</li>
                     <li>Python</li>
@@ -36,7 +36,7 @@
             </div>
             <div class="mt-4">
                 <h3 class="text-lg font-semibold text-yellow-200 dark:text-white">Blandas</h3>
-                <ul class="mt-2 space-y-2 text-gray-500 list-disc list-inside dark:text-gray-400">
+                <ul class="mt-2 space-y-2 text-withe-200 list-disc list-inside dark:text-gray-400">
                     <li>Trabajo en equipo</li>
                     <li>Resolución de problemas</li>
                     <li>Toma de decisiones</li>
