--- a/src/app/Pages/portfolio-home/portfolio-home.component.html
+++ b/src/app/Pages/portfolio-home/portfolio-home.component.html
@@ -26,6 +26,10 @@
         <app-section-container>
             <app-proyects></app-proyects>
         </app-section-container>
+
+        <app-section-container>
+            <app-contactform></app-contactform>
+        </app-section-container>
     </main>
 
     <footer>
