feat: navigation via navbar is added

--- a/src/app/Pages/portfolio-home/portfolio-home.component.html
+++ b/src/app/Pages/portfolio-home/portfolio-home.component.html
@@ -11,23 +11,23 @@
         </div>
 
         
-        <app-section-container>
+        <app-section-container id="Home">
             <app-home></app-home>
         </app-section-container>   
         
-        <app-section-container> 
+        <app-section-container id="Rol"> 
             <app-work-experience></app-work-experience>
         </app-section-container>
 
-        <app-section-container>
+        <app-section-container id="Skills">
             <app-skills></app-skills>
         </app-section-container>
 
-        <app-section-container>
+        <app-section-container id="Projects">
             <app-proyects></app-proyects>
         </app-section-container>
 
-        <app-section-container>
+        <app-section-container id="Contact">
             <app-contactform></app-contactform>
         </app-section-container>
     </main>
