--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="flex justify-center items-center py-5 mx-auto">
     <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="">Inicio</a>
-        <a href="">Rol</a>
-        <a href="">Proyectos</a>
-        <a href="">Habilidades</a>
-        <a href="">Contacto</a>
+        <button (click)="scrollToSection('Home')">Inicio</button>
+        <button (click)="scrollToSection('Rol')">Rol</button>
+        <button (click)="scrollToSection('Projects')">Proyectos</button>
+        <button (click)="scrollToSection('Skills')">Habilidades</button>
+        <button (click)="scrollToSection('Contact')">Contacto</button>
     </nav>
 </header>
