feat: added personal image

--- a/src/app/Pages/portfolio-home/portfolio-home.component.html
+++ b/src/app/Pages/portfolio-home/portfolio-home.component.html
@@ -3,14 +3,11 @@
 
     <main>
         <div class="flex justify-center py-10">
-            <div class="relative w-24 h-24 overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600">
-                <svg class="absolute w-16 h-16 text-gray-400 left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
-                </svg>
+            <div class="relative w-48 h-48 overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600">
+                <img class="w-full h-full object-cover rounded-full" src="https://res.cloudinary.com/dd0ljsgtp/image/upload/v1733532296/dr8qoqd6ulsypiceauus.png" alt="Imagen">
             </div>
-        </div>
+        </div>        
 
-        
         <app-section-container id="Home">
             <app-home></app-home>
         </app-section-container>   
