refactor: the projects component is renamed and the paragraph associated with the projects is fixed

--- a/src/app/Components/projects/projects.component.html
+++ b/src/app/Components/projects/projects.component.html
@@ -1,5 +1,5 @@
 <h2 class="text-2xl font-semibold mb-10">Proyectos</h2>
-<div class="gap-y-12"> <!-- Aumenta el espaciado vertical -->
+<div class="gap-y-12"> 
     <div role="status" class="space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center mb-12"> <!-- Añade margen inferior -->
         <div class="flex items-center justify-center w-full h-48 bg-gray-300 rounded sm:w-96 dark:bg-gray-700">
             <svg class="w-10 h-10 text-gray-200 dark:text-gray-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
