--- a/src/app/Components/work-experience/work-experience.component.html
+++ b/src/app/Components/work-experience/work-experience.component.html
@@ -15,7 +15,7 @@
             <time class="mb-1 text-sm font-normal leading-none text-white-100">January 2027</time>
             <h3 class="text-lg font-semibold text-yellow-200">Ingeniero de sotware</h3>
             <p class="text-base font-normal text-white-100">
-                ngeniero de Software, especializado en desarrollo de aplicaciones, optimización de sistemas y ciencia de datos, con experiencia en metodologías ágiles y resolución de problemas complejos.
+                Ingeniero de Software, especializado en desarrollo de aplicaciones, optimización de sistemas y ciencia de datos, con experiencia en metodologías ágiles y resolución de problemas complejos.
             </p>
         </li>
 </ol>
