--- a/src/app/Pages/portfolio-home/portfolio-home.component.html
+++ b/src/app/Pages/portfolio-home/portfolio-home.component.html
@@ -21,7 +21,7 @@
         </app-section-container>
 
         <app-section-container id="Projects">
-            <app-proyects></app-proyects>
+            <app-projects></app-projects>
         </app-section-container>
 
         <app-section-container id="Contact">
